# anki-mcp

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
scripts/: daily_progress.py
skills/: SKILL.md
src/anki_mcp/: __init__.py  client.py  config.py  metrics.py  models.py  server.py
tests/: test_config.py  test_metrics.py  test_models.py
