[project]
name = "anki-mcp"
version = "0.1.0"
description = "MCP server for Anki via AnkiConnect — create, search, and manage flashcards directly"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.14.5,<3.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.scripts]
anki-mcp = "anki_mcp:run_server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
