[project]
name = "anki-mcp"
version = "0.1.0"
description = "MCP server for Anki via AnkiConnect — create, search, and manage flashcards directly"
readme = "README.md"
license = "MIT"
requires-python = ">=3.13"
authors = [{ name = "chaosisnotrandomitisrhythmic" }]
keywords = ["anki", "mcp", "flashcards", "spaced-repetition", "ankiconnect"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Education",
]
dependencies = [
    "fastmcp>=2.14.5,<3.0",
    "pydantic>=2.0.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[project.scripts]
anki-mcp = "anki_mcp:run_server"

[project.urls]
Homepage = "https://github.com/chaosisnotrandomitisrhythmic/anki-mcp"
Repository = "https://github.com/chaosisnotrandomitisrhythmic/anki-mcp"
Issues = "https://github.com/chaosisnotrandomitisrhythmic/anki-mcp/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
